
>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

February 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Polymorph question should default to the monster that the player last polymorphed to.

February 26 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Zombies are more picky about the brains they want (atleast that's what they say now)
	* Petrus's, angels' and genies' bodyparts disappear when severed.
	* Zombies pick up and use heads if they lack one

February 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added two-headed moose
	
February 24 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added ghosts
	
February 20 2003 Timo Kiviluoto <sonor@phpoint.fi> and
				 Heikki Sairanen<heikki.sairanen@phpoint.net>

	* All items, characters and materials have been attached to some god

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added support for transparent non-walkable tiles
	* Added support for monsters walking through walls
	* Monster generation works now a little better (maybe)

February 20 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added cans filled with mushroom flesh. 
	
February 17 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Dark wizards added 

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Gcc 3.2.1 now compiles the game correctly and without warnings
	* Optimization
	* Removed subbitmap support from FeLib; it was complicated and useless
	* Added some info about materials to SecretKnowledge
	* Diamond plate mails and other objects made of transparent materials now look
	  better in inventory and panel

February 17 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A small bug in the key handling code fixed
	* A fatal bug in the script code corrected
